mailhog.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mailhog-deployment
  labels:
    app: event-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app: event-system
      service: mailhog
  template:
    metadata:
      labels:
        app: event-system
        service: mailhog
    spec:
      containers:
        - name: mailhog-deployment
          image: mailhog/mailhog:latest
          ports:
            - containerPort: 1025
            - containerPort: 8025
---
apiVersion: v1
kind: Service
metadata:
  name: mailhog
spec:
  type: LoadBalancer
  ports:
    - name: http
      port: 80
      targetPort: 8025
    - name: smtp
      port: 25
      targetPort: 1025
  selector:
    service: mailhog
